--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Solid Template</title>
+    <title>Stake</title>
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
 	<script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
@@ -31,9 +31,9 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="#">Pre order now</a><a class="button" href="#">Get in touch</a></div>
+	                        <h1 class="hero-title mt-0">Zafejoker Multinational Company Main Page</h1>
+	                        <p class="hero-paragraph">Our Company Move In Defense And Adance Weapon Tech Development, Join Our Effort By Click Login.</p>
+	                        <div class="hero-cta"><a class="button button-primary" href="Login/dist/index.html">Login</a><a class="button" href="Login/dist/index.html">Join Us</a></div>
 						</div>
 						<div class="hero-figure anime-element">
 							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
@@ -63,8 +63,8 @@
                                     <div class="feature-icon">
 										<img src="dist/images/feature-icon-01.svg" alt="Feature 01">
                                     </div>
-                                    <h4 class="feature-title mt-24">Be Productive</h4>
-                                    <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis. Mauris rhoncus aenean vel elit scelerisque mauris.</p>
+                                    <h4 class="feature-title mt-24">Collaborative</h4>
+                                    <p class="text-sm mb-0">We Work with other private military company like Raytheon, Arlington VA, and Triple Canopy</p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing">
@@ -72,8 +72,8 @@
                                     <div class="feature-icon">
 										<img src="dist/images/feature-icon-02.svg" alt="Feature 02">
                                     </div>
-                                    <h4 class="feature-title mt-24">Be Productive</h4>
-                                    <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis. Mauris rhoncus aenean vel elit scelerisque mauris.</p>
+                                    <h4 class="feature-title mt-24">Doomsday Smasher</h4>
+                                    <p class="text-sm mb-0">Preparing for the mosy worst scenarion happen in the end of humanity by doing weekly Doomsday simmulation</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -81,8 +81,8 @@
                                     <div class="feature-icon">
 										<img src="dist/images/feature-icon-03.svg" alt="Feature 03">
                                     </div>
-                                    <h4 class="feature-title mt-24">Be Productive</h4>
-                                    <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis. Mauris rhoncus aenean vel elit scelerisque mauris.</p>
+                                    <h4 class="feature-title mt-24">Global Atomic</h4>
+                                    <p class="text-sm mb-0">United with every nation capable of having nuclear warhead and cooperation to have quantum weapon tech and ally</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -90,8 +90,8 @@
                                     <div class="feature-icon">
 										<img src="dist/images/feature-icon-04.svg" alt="Feature 04">
                                     </div>
-                                    <h4 class="feature-title mt-24">Be Productive</h4>
-                                    <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis. Mauris rhoncus aenean vel elit scelerisque mauris.</p>
+                                    <h4 class="feature-title mt-24">Honored Achiver</h4>
+                                    <p class="text-sm mb-0">We Also Acvhive many thing that get title for many educational institute in all around the globe</p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing">
@@ -99,8 +99,8 @@
                                     <div class="feature-icon">
 										<img src="dist/images/feature-icon-05.svg" alt="Feature 05">
                                     </div>
-                                    <h4 class="feature-title mt-24">Be Productive</h4>
-                                    <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis. Mauris rhoncus aenean vel elit scelerisque mauris.</p>
+                                    <h4 class="feature-title mt-24">Max Productivity</h4>
+                                    <p class="text-sm mb-0">We train all our crew member staff and agent to do hard work and maximise the capability off maximum productivity</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
@@ -108,8 +108,8 @@
                                     <div class="feature-icon">
 										<img src="dist/images/feature-icon-06.svg" alt="Feature 06">
                                     </div>
-                                    <h4 class="feature-title mt-24">Be Productive</h4>
-                                    <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis. Mauris rhoncus aenean vel elit scelerisque mauris.</p>
+                                    <h4 class="feature-title mt-24">Neutrality</h4>
+                                    <p class="text-sm mb-0">We also have neutral side out of any gym, crews, faction, race, and agama, so that we are in the middle of all</p>
                                 </div>
                             </div>
                         </div>
@@ -129,26 +129,26 @@
                                 <div class="pricing-table-inner is-revealing">
                                     <div class="pricing-table-main">
                                         <div class="pricing-table-header pb-24">
-                                            <div class="pricing-table-price"><span class="pricing-table-price-currency h2">$</span><span class="pricing-table-price-amount h1">49</span><span class="text-xs">/month</span></div>
+                                            <div class="pricing-table-price"><span class="pricing-table-price-currency h2">$</span><span class="pricing-table-price-amount h1">1.6</span><span class="text-xs">/Century</span></div>
                                         </div>
 										<div class="pricing-table-features-title text-xs pt-24 pb-24">What you will get</div>
                                         <ul class="pricing-table-features list-reset text-xs">
                                             <li>
-                                                <span>Lorem ipsum dolor sit nisi</span>
+                                                <span>Advance Technology Of Deffense</span>
                                             </li>
                                             <li>
-                                                <span>Lorem ipsum dolor sit nisi</span>
+                                                <span>24/7 Mercenaries Call</span>
                                             </li>
                                             <li>
-                                                <span>Lorem ipsum dolor sit nisi</span>
+                                                <span>Acces to All Our Military Facility</span>
                                             </li>
 											<li>
-												<span>Lorem ipsum dolor sit nisi</span>
+												<span>Get VIP Title and L5 Keycard</span>
 											</li>
                                         </ul>
                                     </div>
                                     <div class="pricing-table-cta mb-8">
-                                        <a class="button button-primary button-shadow button-block" href="#">Pre order now</a>
+                                        <a class="button button-primary button-shadow button-block" href="#">Inbound</a>
                                     </div>
                                 </div>
                             </div>
@@ -160,9 +160,9 @@
 			<section class="cta section">
 				<div class="container">
 					<div class="cta-inner section-inner">
-						<h3 class="section-title mt-0">Still not convinced on buying?</h3>
+						<h3 class="section-title mt-0">We Waiting You Commander</h3>
 						<div class="cta-cta">
-							<a class="button button-primary button-wide-mobile" href="#">Get in touch</a>
+							<a class="button button-primary button-wide-mobile" href="#">FIRST STRIKE</a>
 						</div>
 					</div>
 				</div>
