--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">Zafejoker Multinational Company Main Page</h1>
-	                        <p class="hero-paragraph">Our Company Move In Defense And Adance Weapon Tech Development, Join Our Effort By Click Login.</p>
+	                        <p class="hero-paragraph">We here are running the biggest private military company based by one name Qaynzie Cafveynra Yelu Koesoemo/XE-8/27</p>
 	                        <div class="hero-cta"><a class="button button-primary" href="Login/dist/index.html">Login</a><a class="button" href="Login/dist/index.html">Join Us</a></div>
 						</div>
 						<div class="hero-figure anime-element">
