--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="pricing-inner section-inner">
                         <div class="pricing-header text-center">
                             <h2 class="section-title mt-0">Unlimited for all</h2>
-                            <p class="section-paragraph mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut ad quis nostrud.</p>
+                            <p class="section-paragraph mb-0">Be Part of our progress and effort,so what the fuck are you waiting for smash the login button commander dont give the bitch a change</p>
                         </div>
 						<div class="pricing-tables-wrap">
                             <div class="pricing-table">
