--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="id" class="no-js">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Stake</title>
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
-	<script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
+    <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
@@ -17,8 +17,8 @@
                 <div class="site-header-inner">
                     <div class="brand header-brand">
                         <h1 class="m-0">
-							<a href="#">
-								<img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                            <a href="#">
+                                <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
                             </a>
                         </h1>
                     </div>
@@ -30,86 +30,86 @@
             <section class="hero">
                 <div class="container">
                     <div class="hero-inner">
-						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Zafejoker Multinational Company Main Page</h1>
-	                        <p class="hero-paragraph">We here are running the biggest private military company based by one name Qaynzie Cafveynra Yelu Koesoemo/XE-8/27</p>
-	                        <div class="hero-cta"><a class="button button-primary" href="Login/dist/index.html">Login</a><a class="button" href="Login/dist/index.html">Join Us</a></div>
-						</div>
-						<div class="hero-figure anime-element">
-							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
-								<rect width="528" height="396" style="fill:transparent;" />
-							</svg>
-							<div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
-							<div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
-							<div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div>
-							<div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div>
-							<div class="hero-figure-box hero-figure-box-05"></div>
-							<div class="hero-figure-box hero-figure-box-06"></div>
-							<div class="hero-figure-box hero-figure-box-07"></div>
-							<div class="hero-figure-box hero-figure-box-08" data-rotation="-22deg"></div>
-							<div class="hero-figure-box hero-figure-box-09" data-rotation="-52deg"></div>
-							<div class="hero-figure-box hero-figure-box-10" data-rotation="-50deg"></div>
-						</div>
+                        <div class="hero-copy">
+                            <h1 class="hero-title mt-0">Halaman Utama Perusahaan Multinasional Zafejoker</h1>
+                            <p class="hero-paragraph">Kami di sini menjalankan perusahaan militer swasta terbesar yang didirikan oleh satu nama: Qaynzie Cafveynra Yelu Koesoemo/XE-8/27</p>
+                            <div class="hero-cta"><a class="button button-primary" href="Login/dist/index.html">Masuk</a><a class="button" href="Login/dist/index.html">Gabung Dengan Kami</a></div>
+                        </div>
+                        <div class="hero-figure anime-element">
+                            <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
+                                <rect width="528" height="396" style="fill:transparent;" />
+                            </svg>
+                            <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
+                            <div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
+                            <div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div>
+                            <div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div>
+                            <div class="hero-figure-box hero-figure-box-05"></div>
+                            <div class="hero-figure-box hero-figure-box-06"></div>
+                            <div class="hero-figure-box hero-figure-box-07"></div>
+                            <div class="hero-figure-box hero-figure-box-08" data-rotation="-22deg"></div>
+                            <div class="hero-figure-box hero-figure-box-09" data-rotation="-52deg"></div>
+                            <div class="hero-figure-box hero-figure-box-10" data-rotation="-50deg"></div>
+                        </div>
                     </div>
                 </div>
             </section>
 
             <section class="features section">
                 <div class="container">
-					<div class="features-inner section-inner has-bottom-divider">
+                    <div class="features-inner section-inner has-bottom-divider">
                         <div class="features-wrap">
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img src="dist/images/feature-icon-01.svg" alt="Feature 01">
+                                        <img src="dist/images/feature-icon-01.svg" alt="Fitur 01">
                                     </div>
-                                    <h4 class="feature-title mt-24">Collaborative</h4>
-                                    <p class="text-sm mb-0">We Work with other private military company like Raytheon, Arlington VA, and Triple Canopy</p>
-                                </div>
-                            </div>
-							<div class="feature text-center is-revealing">
-                                <div class="feature-inner">
-                                    <div class="feature-icon">
-										<img src="dist/images/feature-icon-02.svg" alt="Feature 02">
-                                    </div>
-                                    <h4 class="feature-title mt-24">Doomsday Smasher</h4>
-                                    <p class="text-sm mb-0">Preparing for the mosy worst scenarion happen in the end of humanity by doing weekly Doomsday simmulation</p>
+                                    <h4 class="feature-title mt-24">Kolaboratif</h4>
+                                    <p class="text-sm mb-0">Kami bekerja sama dengan perusahaan militer swasta lainnya seperti Raytheon, Arlington VA, dan Triple Canopy</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img src="dist/images/feature-icon-03.svg" alt="Feature 03">
+                                        <img src="dist/images/feature-icon-02.svg" alt="Fitur 02">
                                     </div>
-                                    <h4 class="feature-title mt-24">Global Atomic</h4>
-                                    <p class="text-sm mb-0">United with every nation capable of having nuclear warhead and cooperation to have quantum weapon tech and ally</p>
+                                    <h4 class="feature-title mt-24">Penghancur Hari Kiamat</h4>
+                                    <p class="text-sm mb-0">Mempersiapkan skenario terburuk yang terjadi di akhir umat manusia dengan melakukan simulasi Hari Kiamat mingguan</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img src="dist/images/feature-icon-04.svg" alt="Feature 04">
+                                        <img src="dist/images/feature-icon-03.svg" alt="Fitur 03">
                                     </div>
-                                    <h4 class="feature-title mt-24">Honored Achiver</h4>
-                                    <p class="text-sm mb-0">We Also Acvhive many thing that get title for many educational institute in all around the globe</p>
-                                </div>
-                            </div>
-							<div class="feature text-center is-revealing">
-                                <div class="feature-inner">
-                                    <div class="feature-icon">
-										<img src="dist/images/feature-icon-05.svg" alt="Feature 05">
-                                    </div>
-                                    <h4 class="feature-title mt-24">Max Productivity</h4>
-                                    <p class="text-sm mb-0">We train all our crew member staff and agent to do hard work and maximise the capability off maximum productivity</p>
+                                    <h4 class="feature-title mt-24">Atom Global</h4>
+                                    <p class="text-sm mb-0">Bersatu dengan setiap negara yang mampu memiliki hulu ledak nuklir dan bekerja sama untuk memiliki teknologi senjata kuantum dan aliansi</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img src="dist/images/feature-icon-06.svg" alt="Feature 06">
+                                        <img src="dist/images/feature-icon-04.svg" alt="Fitur 04">
                                     </div>
-                                    <h4 class="feature-title mt-24">Neutrality</h4>
-                                    <p class="text-sm mb-0">We also have neutral side out of any gym, crews, faction, race, and agama, so that we are in the middle of all</p>
+                                    <h4 class="feature-title mt-24">Pencapaian Terhormat</h4>
+                                    <p class="text-sm mb-0">Kami juga mencapai banyak hal yang mendapatkan gelar dari banyak institusi pendidikan di seluruh dunia</p>
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/images/feature-icon-05.svg" alt="Fitur 05">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Produktivitas Maksimal</h4>
+                                    <p class="text-sm mb-0">Kami melatih semua anggota kru, staf, dan agen kami untuk bekerja keras dan memaksimalkan kemampuan produktivitas maksimum</p>
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/images/feature-icon-06.svg" alt="Fitur 06">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Netralitas</h4>
+                                    <p class="text-sm mb-0">Kami juga memiliki sisi netral dari gym, kru, faksi, ras, dan agama apa pun, sehingga kami berada di tengah-tengah semua</p>
                                 </div>
                             </div>
                         </div>
@@ -121,34 +121,34 @@
                 <div class="container-sm">
                     <div class="pricing-inner section-inner">
                         <div class="pricing-header text-center">
-                            <h2 class="section-title mt-0">Unlimited for all</h2>
-                            <p class="section-paragraph mb-0">Be Part of our progress and effort,so what the fuck are you waiting for smash the login button commander dont give the bitch a change</p>
+                            <h2 class="section-title mt-0">Tanpa Batas untuk semua</h2>
+                            <p class="section-paragraph mb-0">Jadilah bagian dari kemajuan dan upaya kami, jadi tunggu apa lagi, tekan tombol login komandan, jangan beri kesempatan pada bajingan itu</p>
                         </div>
-						<div class="pricing-tables-wrap">
+                        <div class="pricing-tables-wrap">
                             <div class="pricing-table">
                                 <div class="pricing-table-inner is-revealing">
                                     <div class="pricing-table-main">
                                         <div class="pricing-table-header pb-24">
-                                            <div class="pricing-table-price"><span class="pricing-table-price-currency h2">$</span><span class="pricing-table-price-amount h1">1.6</span><span class="text-xs">/Century</span></div>
+                                            <div class="pricing-table-price"><span class="pricing-table-price-currency h2">$</span><span class="pricing-table-price-amount h1">1.6</span><span class="text-xs">/Abad</span></div>
                                         </div>
-										<div class="pricing-table-features-title text-xs pt-24 pb-24">What you will get</div>
+                                        <div class="pricing-table-features-title text-xs pt-24 pb-24">Apa yang akan Anda dapatkan</div>
                                         <ul class="pricing-table-features list-reset text-xs">
                                             <li>
-                                                <span>Advance Technology Of Deffense</span>
+                                                <span>Teknologi Pertahanan Tingkat Lanjut</span>
                                             </li>
                                             <li>
-                                                <span>24/7 Mercenaries Call</span>
+                                                <span>Panggilan Tentara Bayaran 24/7</span>
                                             </li>
                                             <li>
-                                                <span>Acces to All Our Military Facility</span>
+                                                <span>Akses ke Semua Fasilitas Militer Kami</span>
                                             </li>
-											<li>
-												<span>Get VIP Title and L5 Keycard</span>
-											</li>
+                                            <li>
+                                                <span>Dapatkan Gelar VIP dan Kartu Kunci L5</span>
+                                            </li>
                                         </ul>
                                     </div>
                                     <div class="pricing-table-cta mb-8">
-                                        <a class="button button-primary button-shadow button-block" href="#">Inbound</a>
+                                        <a class="button button-primary button-shadow button-block" href="#">Masuk</a>
                                     </div>
                                 </div>
                             </div>
@@ -157,38 +157,38 @@
                 </div>
             </section>
 
-			<section class="cta section">
-				<div class="container">
-					<div class="cta-inner section-inner">
-						<h3 class="section-title mt-0">We Waiting You Commander</h3>
-						<div class="cta-cta">
-							<a class="button button-primary button-wide-mobile" href="#">FIRST STRIKE</a>
-						</div>
-					</div>
-				</div>
-			</section>
+            <section class="cta section">
+                <div class="container">
+                    <div class="cta-inner section-inner">
+                        <h3 class="section-title mt-0">Kami Menunggumu Komandan</h3>
+                        <div class="cta-cta">
+                            <a class="button button-primary button-wide-mobile" href="#">SERANGAN PERTAMA</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer class="site-footer">
             <div class="container">
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
-						<a href="#">
-							<img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
-						</a>
+                        <a href="#">
+                            <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                        </a>
                     </div>
                     <ul class="footer-links list-reset">
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="#">Kontak</a>
                         </li>
                         <li>
-                            <a href="#">About us</a>
+                            <a href="#">Tentang Kami</a>
                         </li>
                         <li>
-                            <a href="#">FAQ's</a>
+                            <a href="#">FAQ</a>
                         </li>
                         <li>
-                            <a href="#">Support</a>
+                            <a href="#">Dukungan</a>
                         </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
@@ -217,7 +217,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2019 Solid, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2019 Solid, Semua hak dilindungi undang-undang</div>
                 </div>
             </div>
         </footer>
